<resources>
    <string name="app_name">Bookie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">About Me</string>
    <string name="view_allbooks">View All Books</string>
    <string name="create_book">Create Book</string>
    <string name="view_ownbook">Own Created Books</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
